--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="title_activity_basic_layout">BasicLayoutActivity</string>
     <string name="placeholder_search">Search</string>
     <string name="ab1_inversions">Inversions</string>
+    <string name="fc2_nature_meditations">Nature Meditations</string>
 </resources>
