--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="placeholder_search">Search</string>
     <string name="ab1_inversions">Inversions</string>
     <string name="fc2_nature_meditations">Nature Meditations</string>
+    <string name="align_your_body">Align Your Body</string>
 </resources>
