--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="ab1_inversions">Inversions</string>
     <string name="fc2_nature_meditations">Nature Meditations</string>
     <string name="align_your_body">Align Your Body</string>
+    <string name="favorite_collections">Favorite Collections</string>
 </resources>
