--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="fc2_nature_meditations">Nature Meditations</string>
     <string name="align_your_body">Align Your Body</string>
     <string name="favorite_collections">Favorite Collections</string>
+    <string name="bottom_navigation_home">Home</string>
+    <string name="bottom_navigation_profile">Profile</string>
 </resources>
